--- a/src/popup/settings/import.component.html
+++ b/src/popup/settings/import.component.html
@@ -10,14 +10,14 @@
             <span class="title">{{'exportVault' | i18n}}</span>
         </div>
         <div class="right">
-            <button appBlurClick type="submit">{{'submit' | i18n}}</button>
+            <button id = "submit" appBlurClick type="submit">{{'submit' | i18n}}</button>
         </div>
     </header>
     <content>
         <div class="box">
             <div class="box-content">
                 <div class="box-content-row" appBoxRow>
-                    <input id = "file" type="file" accept=".csv,.json" (change) = "onFileSelected($event.target.file[0])">
+                    <input id = "file" type="file" accept=".csv,.json" (change) = "onFileSelected($event.target.files[0])">
                 </div>
                 <div class="box-content-row box-content-row-flex" appBoxRow>
                     <div class="row-main">
